--- a/templates/mandate_form.html
+++ b/templates/mandate_form.html
@@ -27,7 +27,7 @@
 * see http://www.gnu.org/licenses/.
 {% endcomment %}
 {% block style %}
-<link rel="stylesheet" href="{% static 'css/custom.css' %}">
+<link rel="stylesheet" href="{% static 'css/osis.css' %}">
 <link rel="stylesheet" href="{% static 'css/jquery-ui.css' %}">
  <style>
      .errorlist {color: red;}
