--- a/templates/mandate_reviews_view.html
+++ b/templates/mandate_reviews_view.html
@@ -26,7 +26,7 @@
 * see http://www.gnu.org/licenses/.
 {% endcomment %}
 {% block style %}
-<link rel="stylesheet" href="{% static 'css/custom.css' %}">
+<link rel="stylesheet" href="{% static 'css/osis.css' %}">
 {% endblock %}
 {% block breadcrumb %}
 <li><a href="{% url 'assistant_mandates' %}" id="lnk_my_mandates">{% trans 'My mandates' %}</a></li>
