--- a/templates/review_form.html
+++ b/templates/review_form.html
@@ -26,7 +26,7 @@
 * see http://www.gnu.org/licenses/.
 {% endcomment %}
 {% block style %}
-<link rel="stylesheet" href="{% static 'css/custom.css' %}">
+<link rel="stylesheet" href="{% static 'css/osis.css' %}">
 {% endblock %}
 
 {% block breadcrumb %}
